# clean-room-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TEST_SUITE_AUDIT.md  TODO.md  TRANSPARENCY_AUDIT.md  conversation_summary_2026_02_22.md  pyproject.toml
.claude/: settings.json
archive/: archived-context_management_and_agents_review.md  archived-conversation_summary_2026_02_22.md  archived-meta-plan-v2.md  archived-phase4-validation-benchmark.md  context_management_and_agents_review.md  phase4-validation-benchmark.md
findings/: architecture-sweep.md  three-prompt-strategy.md
future/: qwen_lora_fine_tuning_from_scratch.md
infrastructure/: ML_Workstation_Build_Spec.md  linux_ml_environment.md  usb-intermediary-design.md
planning/: binary-decomposition-plan.md  cli-and-config.md  decompose-a11-part-grouping.md  decompose-a18-error-classification.md  decompose-a20-adjustment.md  meta-plan.md  phase1-implementation.md  phase1-knowledge-base.md  phase2-retrieval-pipeline.md  phase3-agent-harness.md  phase3-implementation.md  phase4-guidelines.md  phase4-validation-benchmark.md  pipeline-and-modes.md  refactoring-plan.md  repo-corpus.md  scaffold-then-implement-plan.md  schemas.md  training-strategy.md  transparency-enforcement-prompt.md
protocols/: Feature_Time_Protocol.md
references/: benchmarks.md  repo-corpus.md  repo_documentation_quality.md
research/: c_repos.md  c_training_infrastructure.md  context_window_size_research.md  distillation_pipeline_report_v2.md  fine_tuning_lora_stacking.md  knowledge_vs_reason_research.md  lora_training_git_data.md  (+3 more)
(+204 files in other folders)
